Change path to config

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-postgres.driver=org.postgresql.Driver
-postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-postgres.password=123
-postgres.name=postgres
+driver=org.postgresql.Driver
+url=jdbc:postgresql://localhost:5432/myfirstdb
+password=123
+name=postgres
