--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
-driver=org.postgresql.Driver
-url=jdbc:postgresql://localhost:5432/myfirstdb
-password=123
-name=postgres
+postgres.driver=org.postgresql.Driver
+postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
+postgres.password=123
+postgres.name=postgres
