--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,4 @@
 postgres.driver=org.postgresql.Driver
 postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-postgres.password=123
+postgres.password=postgres
 postgres.name=postgres
